<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="name">Nome Completo</string>
    <string name="cPassword">Confirmar Senha:</string>
    <string name="singup">Cadastrar</string>
    <string name="cancel">Cancelar</string>
    <string name="lists">Listas:</string>
    <string name="create">Criar</string>
    <string name="listName">Nome da lista</string>
    <string name="removeProduct">Remover Produto</string>
    <string name="deleteList">Excluir Lista</string>
    <string name="addProduct">Adicionar Produto</string>
    <string name="productName">Nome do Produto</string>
    <string name="welcome">Bem vindo, </string>
    <string name="createList">Criar Lista de Compras</string>
    <string name="searchList">Procurar Lista de Compras</string>
    <string name="update">Atualizar</string>
    <string name="currentName">Nome atual</string>
    <string name="newName">Novo nome</string>
    <string name="delete">Excluir</string>
    <string name="editList">Editar Lista</string>
    <string name="finish">Finalizar</string>
    <string name="buy">Comprar</string>
    <string name="historic">Histórico de Compras</string>
</resources>
